--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>REFLX Labs &mdash; Expression Through Action</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lora:400,400italic|Muli:300,300italic,400,400italic,normal|Playfair+Display:normalitalic"/>
@@ -42,5 +42,16 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{site.url}}/components/jquery/jquery.min.js"><\/script>')</script>
     <script src="{{ site.url }}/components/bootstrap/js/bootstrap.min.js"></script>
+    {% if site.google_analytics_tracking_id %}
+      <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', '{{ site.google_analytics_tracking_id }}', 'reflxlabsinc.com');
+        ga('send', 'pageview');
+      </script>
+    {% endif %}
   </body>
 </html>
