--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -13,32 +13,44 @@
       <script src="{{ site.url }}/assets/js/html5shiv.js"></script>
       <script src="{{ site.url }}/assets/js/respond.min.js"></script>
     <![endif]-->
+    <!--[if lt IE 7]>
+      <style media="screen" type="text/css">
+        #whole-page-container {
+          height:100%;
+        }
+      </style>
+    <![endif]-->
   </head>
   <body>
 
-    {% block jumbo %}{% endblock %}
+    <div id="whole-page-container">
+      {% block jumbo %}{% endblock %}
 
-    {% block content_wrapper %}
-      <section class="content">
-        <div class="container">
-          {% block content %}Fallback content. :){% endblock %}
-        </div>
-      </section>
-    {% endblock %}
+      <div id="whole-page-content-container">
+        {% block content_wrapper %}
+          <section class="content">
+            <div class="container">
+              {% block content %}Fallback content. :){% endblock %}
+            </div>
+          </section>
+        {% endblock %}
 
-    {% block footer %}
-      <section class="site-footer">
-        <footer>
-          <div class="press">
-            Press inquiries: <a href="mailto:press@reflxlabsinc.com">press@reflxlabsinc.com</a>
-          </div>
+        {% block footer %}
+          <section class="site-footer">
+            <footer>
+              <div class="press">
+                Press inquiries: <a href="mailto:press@reflxlabsinc.com">press@reflxlabsinc.com</a>
+              </div>
 
-          <div class="copyright">
-            &copy; 2013 REFLX Labs, Inc. All rights reserved.
-          </div>
-        </footer>
-      </section>
-    {% endblock %}
+              <div class="copyright">
+                &copy; 2013 REFLX Labs, Inc. All rights reserved.
+              </div>
+            </footer>
+          </section>
+        {% endblock %}
+      </div>
+    </div>
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{site.url}}/components/jquery/jquery.min.js"><\/script>')</script>
     <script src="{{ site.url }}/components/bootstrap/js/bootstrap.min.js"></script>
