--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -18,6 +18,29 @@
 	box-sizing: border-box;
 }
 
+html,
+body {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+}
+
+#whole-page-container {
+	min-height:100%;
+	position:relative;
+}
+
+#whole-page-content-container {
+	padding-bottom: 6em;
+}
+
+section.site-footer {
+	position:absolute;
+	bottom:0;
+	width:100%;
+	height: 6em;   /* Height of the footer */
+}
+
 body {
 	font-family: "Muli", sans-serif;
 	color: #8a8a8a;
@@ -122,6 +145,12 @@ section.jumbo h1 {
 	}
 	.site-footer .press {
 		float: right;
+	}
+	#whole-page-content-container {
+		padding-bottom: 3.5em;
+	}
+	section.site-footer {
+		height: 3.5em;   /* Height of the footer */
 	}
 }
 
