--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -24,6 +24,27 @@
   <body>
 
     <div id="whole-page-container">
+      {% block primary_navigation %}
+        <nav class="navbar navbar-default" role="navigation">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ site.url }}/">REFLX Labs</a>
+          </div>
+
+          <!-- Collect the nav links, forms, and other content for toggling -->
+          <div class="collapse navbar-collapse navbar-ex1-collapse">
+            <ul class="nav navbar-nav">
+              <li><a href="{{ site.url }}/">Home</a></li>
+              <li><a href="{{ site.url }}/press/">Press</a></li>
+            </ul>
+          </div><!-- /.navbar-collapse -->
+        </nav>
+      {% endblock %}
       {% block jumbo %}{% endblock %}
 
       <div id="whole-page-content-container">
