Added CES and privacy policy.

--- a/source/_views/base.twig
+++ b/source/_views/base.twig
@@ -41,6 +41,7 @@
             <ul class="nav navbar-nav">
               <li><a href="{{ site.url }}/">Home</a></li>
               <li><a href="{{ site.url }}/press/">Press</a></li>
+              <li><a href="{{ site.url }}/privacy/">Privacy</a></li>
             </ul>
           </div><!-- /.navbar-collapse -->
         </nav>
@@ -65,6 +66,10 @@
 
               <div class="copyright">
                 &copy; 2013 REFLX Labs, Inc. All rights reserved.
+              </div>
+
+              <div class="privacy">
+                <a title="REFLX Labs Privacy Policy" href="{{ site.url }}/privacy/">Privacy Policy</a>
               </div>
             </footer>
           </section>
