--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -97,6 +97,7 @@ section.jumbo h1 {
 	text-align: center;
 }
 
+.site-footer .privacy,
 .site-footer .copyright,
 .site-footer .press {
 	color: #ccc;
