--- a/source/_layouts/base.twig
+++ b/source/_layouts/base.twig
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>REFLX Labs &mdash; Expression Through Action</title>
+    <title>
+      {% if page.full_title %}
+        {{ page.full_title }}
+      {% elseif page.title %}
+        {{ page.title }} &mdash; REFLX Labs &mdash; Expression Through Action
+      {% else %}
+        REFLX Labs &mdash; Expression Through Action
+      {% endif %}
+    </title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="{{ site.url }}/components/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lora:400,400italic|Muli:300,300italic,400,400italic,normal|Playfair+Display:normalitalic"/>
@@ -40,6 +48,8 @@
           <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
               <li><a href="{{ site.url }}/">Home</a></li>
+              <li><a href="{{ site.url }}/about/">About</a></li>
+              <li><a href="{{ site.url }}/team/">Team</a></li>
               <li><a href="{{ site.url }}/press/">Press</a></li>
               <li><a href="{{ site.url }}/privacy/">Privacy</a></li>
             </ul>
