--- a/source/_layouts/base.twig
+++ b/source/_layouts/base.twig
@@ -53,6 +53,9 @@
               <li><a href="{{ site.url }}/press/">Press</a></li>
               <li><a href="{{ site.url }}/privacy/">Privacy</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="http://boogio.com/">Boogio</a></li>
+            </ul>
           </div><!-- /.navbar-collapse -->
         </nav>
       {% endblock %}
