Copyright year automatically generated.

--- a/source/_layouts/base.twig
+++ b/source/_layouts/base.twig
@@ -78,7 +78,7 @@
               </div>
 
               <div class="copyright">
-                &copy; 2013 REFLX Labs, Inc. All rights reserved.
+                &copy; {{ "now"|date("Y") }} REFLX Labs, Inc. All rights reserved.
               </div>
 
               <div class="privacy">
