--- a/source/assets/css/style.css
+++ b/source/assets/css/style.css
@@ -218,6 +218,12 @@ section.jumbo h1 {
 	width: 0; height: 0;
 }
 
+.team-divider {
+	clear: both;
+	marign-top: 3em;
+	margin-bottom: 3em;
+}
+
 @media only screen and (max-width: 420px) {
 	.bio.col-xs-6 {
 		width: 100%;
@@ -303,17 +309,17 @@ section.jumbo h1 {
 }
 
 @media only screen and (min-width: 420px) and (max-width: 991px) {
-	.bio.col-xs-6:nth-of-type(2n+1) {
+	.bios .bio.col-xs-6:nth-of-type(2n+1) {
 		clear: both;
 	}
 }
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-	.bio.col-md-4:nth-of-type(3n+1) {
+	.bios .bio.col-md-4:nth-of-type(3n+1) {
 		clear: both;
 	}
 }
 @media only screen and (min-width: 1200px) {
-	.bio.col-lg-3:nth-of-type(4n+1) {
+	.bios .bio.col-lg-3:nth-of-type(4n+1) {
 		clear: both;
 	}
 }
